api-k8s/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helados
spec:
  rules:
  - host: api.hnavejas.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: helados
            port:
              number: 80
